tests/NormalTests/paczka1/small_fuzzy/57904724.err
Error in line 5: aWNNrcL S777 16,97
Error in line 9: aWNNrcL S777 36,7
